fix: plugins 옵션 true로 변경

--- a/server/config/config.json
+++ b/server/config/config.json
@@ -579,13 +579,13 @@
         "Plugins": {},
         "PluginStates": {
             "com.mattermost.calls": {
-                "Enable": false
+                "Enable": true
             },
             "com.mattermost.nps": {
-                "Enable": false
+                "Enable": true
             },
             "playbooks": {
-                "Enable": false
+                "Enable": true
             }
         },
         "EnableMarketplace": true,
