--- a/server/config/config.json
+++ b/server/config/config.json
@@ -528,11 +528,11 @@
         "IgnoredPurgeIndexes": ""
     },
     "BleveSettings": {
-        "IndexDir": "",
-        "EnableIndexing": false,
-        "EnableSearching": false,
-        "EnableAutocomplete": false,
-        "BatchSize": 10000
+        "IndexDir": "/mattermost/bleve-indexes",
+        "EnableIndexing": true,
+        "EnableSearching": true,
+        "EnableAutocomplete": true,
+        "BatchSize": 1000
     },
     "DataRetentionSettings": {
         "EnableMessageDeletion": false,
